--- a/landingstyles.css
+++ b/landingstyles.css
@@ -3,7 +3,7 @@ body
 {
     margin: 0px;
     padding:1% 10%;
-    background-image: url('images/Paint-Splash-HD-Desktop-Wallpaper-18192.jpg');
+    background-color:red;
     background-size: cover;
     background-repeat: no-repeat;
 }
