--- a/landingstyles.css
+++ b/landingstyles.css
@@ -3,7 +3,7 @@ body
 {
     margin: 0px;
     padding:1% 10%;
-    background-image:url("Sneha/images/Paint-Splash-HD-Desktop-Wallpaper-18192.jpg");
+    background-image:url("https://lh3.googleusercontent.com/proxy/cZwVGlxBL6waMZPpBLG0fJP6SyGhZtlnCOA8FktrPbvGPMv9W-DRniqBSxZmOwglY31xUmh-_BBP26NNXXxNCUQ_m8V73QzFn3udRh8NZ79gj72y4AIFJ_yCaXulKlobLnwZEYYkm7AE1REeqAJvh6Xbaag-kKM1");
     background-size: cover;
     background-repeat: no-repeat;
 }
