--- a/aboutstyles.css
+++ b/aboutstyles.css
@@ -1,29 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 body
 {
-
+    font-size: 12px;
     margin: 0px;
-    padding:1% 10%;
-    background-image: url('./Images/wp3589868.jpg');
+     background-image: url('images/wp3589868.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    box-sizing: border-box;
 }
 
 nav
 {
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
     letter-spacing: 4px;
     margin-bottom: 130px;
- 
+    padding: 1rem 15rem;
 }
 
 
 
 nav h1{
-    font-size: 2em;
+    font-size: 2rem;
     color: rgb(47,144,230);
 }
 
@@ -36,24 +37,24 @@ a:visited{
 }
 nav h3:hover{
     color: #2f90e6;
-   
-
 }
 
 .cont{
+    box-sizing: border-box;
     display: flex;
     width: 100%;
     font-family: HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     color: #2f90e6;
     justify-content: space-around;
     margin: 0 auto;
-    
+ box-sizing: border-box;
+    padding: 0 15em;
 
 }
 
 
 .img-cont{
-    width: 350px;
+    width: 25%;
     border-radius: 30px 0px 30px 0px;
     border: 7px solid rgb(221, 221, 221);
     transition: all 0.1s linear;
@@ -91,24 +92,10 @@ li{
     width: 100px;
     border-radius: 100px;
     border: 10px solid #2f90e6;
-   
 }
 
-footer{
-    position: fixed;
-  left: 0;
-  bottom: 0;
-  height: 50px;
-  width: 100%;
-  background-color: rgb(47,144,230);
-  color: white;
-  text-align: center;
-}
 
 .hr-ver{
-  
-  
-
     width: 5px;
     background-color: rgb(47,144,230);
 }
@@ -116,4 +103,51 @@ footer{
 .info1 hr{
     height: 2px;
     background-color: #2f90e6;
+}
+
+
+.card h1,.info2 h1{
+    font-size: 2.5rem;
+}
+
+.card p,.info2 p{
+    font-size: 1.2rem;
+}
+
+.info2 li{
+    font-size: 1rem;
+}
+
+@media (max-width:675px)
+{
+   body{
+       padding: 0em;
+       box-sizing: border-box;
+   }
+
+   nav{
+       display: flex;
+       flex-direction: column;
+       text-align: center;
+       padding:1em;
+       margin-bottom: 5em;
+   }
+
+   .cont{
+       display: flex;
+       flex-direction: column;
+       width: 70%;
+       padding: 0px;
+   }
+
+   .img-cont{
+       width: 100%;
+       margin: 0 auto;
+       margin-bottom: 2em;
+   }
+
+   hr{
+       width: 70%;
+       margin: 0px;
+   }
 }
